Optimizacion y adicion de tablas para el manejo de usuarios